--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "TVLoader",
+    "name": "TVLoaderExtended",
     "version_number": "1.1.2",
     "website_url": "https://github.com/RattenBonkers",
     "description": "Allows players to add custom videos to the Television.",
